Adding Bootstrap Classes and Splitting the App

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,10 @@
-<h1>
-  {{title}}
-</h1>
-
-<messages></messages>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-3">{{ title }}</h1>
+    <p class="lead"> Simple Message App with Firebase and Bootstrap</p>
+  </div>
+</div>
+<div class="container">
+  <messages></messages>
+</div>
 
