Adding the Update Message Service

--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -1,10 +1,10 @@
 <div class="container">
   <div class="card">
     <ul class="list-group list-group-flush">
-      <li *ngFor="let message of messages | async"
+      <li *ngFor="let message of messages$ | async"
           class="list-group-item">
           <message [messageText]="message.text"
-          (onUpdated)="onUpdated($event)"></message>
+          (onUpdated)="onUpdated($event, message.$key)"></message>
       </li>
     </ul>
   </div>
