Creating Message Form

--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -1,5 +1,6 @@
 <div class="container">
-  <div class="card">
+  <message-form></message-form>
+  <div class="card container-margin">
     <ul class="list-group list-group-flush">
       <li *ngFor="let message of messages$ | async"
           class="list-group-item">
