--- a/src/app/message/message.component.html
+++ b/src/app/message/message.component.html
@@ -9,4 +9,5 @@
     [value]="messageText" #inputText>
   </div>
   <button (click)="update(inputText.value)" class="btn btn-primary">Update</button>
+  <button (click)="delete()" class="btn btn-danger">Delete </button>
 </div>
